[gd_scene load_steps=3 format=3 uid="uid://dposexvk3a7mv"]

[ext_resource type="Script" path="res://scenes/game/maps/main_map/report_area/report_area.gd" id="1_wc61c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ibll7"]
radius = 146.003

[node name="ReportArea" type="Area2D"]
collision_mask = 2
script = ExtResource("1_wc61c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ibll7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
